--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -15,27 +15,33 @@
 
     h3 {
       color: #333;
-      font-size: 25px;
+      font-size: 5vw;
     }
 
     h2 {
       color: #333;
-      margin-top: 30px;
+      margin-top: 1%;
       left: 41.25%;
+      font-size: 2vw;
+    }
+
+    h1 {
+      margin-top: 1%;
+      font-size: 3vw;
     }
 
     .imsa-logo {
       position: fixed;
-      top: 25px;
-      left: 50px;
-      width: 100px;
+      top: 4%;
+      left: 3%;
+      width: 7.5%;
     }
 
     .profile-icon {
       position: fixed;
-      top: 25px;
-      right: 50px; 
-      width: 100px; 
+      top: 4%;
+      right: 3%; 
+      width: 7.5%; 
       cursor: pointer;
     }
 
@@ -143,7 +149,7 @@
       left: 11%; 
       transform-origin: bottom left; 
       letter-spacing: 0.8em; 
-      font-size: 100px; 
+      font-size: 6vw; 
       font-family: 'Mustopha'; 
     }
 
@@ -410,7 +416,7 @@
 
 <div class="floating-button">
   <div class = "newFinance">
-    <% if @current_member&.position != 'Member' %>
+    <% if @current_member&.position != 'Member' && @current_member&.position != 'Pending' %>
       <%= link_to new_event_path do %>
         <button type="button">+</button>
       <% end %>
