--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -9,17 +9,17 @@
   <style>
     body {
       background-color: #f4f4f4;
-      padding-top: 50px; /* Adjust for fixed navbar */
+      padding-top: 70px;
     }
 
     .event-details-container {
-      max-width: 300px; /* Adjusted max-width */
+      max-width: 100%;
       margin: 50px auto;
       background-color: #fff;
       padding: 10px;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      top: 70%
+      top: -5%
     }
 
     h5 {
@@ -31,21 +31,19 @@
       margin-bottom: 15px;
     }
 
-    .actions-card {
-      margin-top: 20px;
-    }
-
     .img-fluid {
-      width: 70%; /* Adjusted width */
+      max-width: 100%;
       height: auto;
       display: block;
-      margin: 0 auto; /* Center the image */
+      margin: 0 auto;
     }
 
     .event-image {
-      text-align: center; /* Center the card */
-      left: 150%; 
-      top: 0%; 
+      text-align: center;
+    }
+
+    .actions-card {
+      margin-top: 10%;
     }
   </style>
 </head>
@@ -81,7 +79,7 @@
           <p class="card-text">
             <strong>Score:</strong> <%= @event.score %>
           </p>
-          <% if current_member&.position != 'Member' %>
+          <% if current_member&.position != 'Member' && current_member&.position != 'Pending' %>
             <p class="card-text">
               <strong>Password:</strong> <%= @event.password %>
             </p>
