--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -147,9 +147,10 @@
   <% end %>
     <% if admin_signed_in? %>
       <% current_member = Member.find_by(email: current_admin.email) %>
+      <br>
 
       <% if current_member&.position == 'President'%>
-        <h2>Admin Dashboard</h2>
+        <h1>Admin Dashboard</h1>
         <div class="links">
           <div class="admin-links">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -181,8 +182,8 @@
             </nav>
           </div>
         </div>
-      <% elsif current_member&.position == 'Officer' || current_member&.position == 'Finance Officer' %>
-        <h2>Officer Dashboard</h2>
+      <% elsif current_member&.position == 'Officer' || current_member&.position == 'Finance Chair' %>
+        <h1>Officer Dashboard</h1>
         <div class="links">
           <div class="admin-links">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -199,7 +200,7 @@
                     <%= link_to 'Members', members_path, class: 'nav-link' %>
                   </li>
                   <li class="nav-item">
-                    <%= link_to 'Officer Members', officer_index_members_path, class: 'nav-link' %>
+                    <%= link_to 'Officers', officer_index_members_path, class: 'nav-link' %>
                   </li>
                   <li class="nav-item">
                     <%= link_to 'Events', events_path, class: 'nav-link' %>
@@ -216,12 +217,12 @@
           </div>
         </div>
       <% elsif current_member&.position == 'Pending' %>
-        <h2>Pending Member Dashboard</h2>
+        <h1>Pending Member Dashboard</h1>
           <h2>Your membership is pending...</h2>
           <h2>You won't be approved for an account unless you're a paid member of TAMU IMSA.</h2>
       <% else %>
         <div class="admin-info">
-          <h2>Member Dashboard</h2>
+          <h1>Member Dashboard</h1>
           <div class="links">
             <nav class="navbar navbar-expand-lg navbar-light bg-light member-navbar">
               <ul class="navbar-nav">
